# zenith-wasi

./: .gitignore  Cargo.toml  README.md
apps/greeter/: Cargo.toml
apps/greeter/src/: lib.rs
crates/zenith/: Cargo.toml
crates/zenith-derive/: Cargo.toml
crates/zenith-derive/src/: lib.rs
crates/zenith/src/: lib.rs
src/: main.rs
