[package]
name = "zenith-wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.0"
anyhow = "1.0.65"
wasmer = "3.0.0-beta.2"
wasmer-wasi = "3.0.0-beta.2"
glob = "0.3.0"
serde = { version = "1.0.145", features = ["derive"] } 
serde_json = "1.0.85"
bincode = "1.3.3"
zenith = { path = "./crates/zenith" }
zenith_derive = { path = "./crates/zenith-derive" }