[package]
name = "greeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
serde = { version = "1.0.145", features = ["derive"] } 
serde_json = "1.0.85"
bincode = "1.3.3"
zenith = { path = "../../crates/zenith" }
zenith_derive = { path = "../../crates/zenith-derive" }